--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ body {
 
 #fps {
     position: absolute;
-    background-color: rgb(35, 185, 110);
-    border: 2px solid red;
+    background-color: rgb(185, 35, 135);
+    border: 2px solid rgb(78, 202, 151);
     text-align: center;
     font-size: 36px;
     color: white;
