--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@ body {
     
 }
 #canvas {
+    position: fixed;
     width: 100%;
     height: 100%;
     margin: 0;
-    overflow: hidden;
+    
     background-color: red;
 }
 
